parser/src/snapshots/squawk_parser__parse__tests__define_stmt-3.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: DefineStmt(
                Object({
                    "definition": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "Integer": Object({
                                        "ival": Number(
                                            16,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "internallength",
                                ),
                                "location": Number(
                                    23,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            56,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "str": String(
                                                        "my_box_in_function",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "input",
                                ),
                                "location": Number(
                                    48,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            89,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "str": String(
                                                        "my_box_out_function",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "output",
                                ),
                                "location": Number(
                                    80,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            124,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "str": String(
                                                        "float4",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "element",
                                ),
                                "location": Number(
                                    114,
                                ),
                            }),
                        }),
                    ]),
                    "defnames": Array([
                        Object({
                            "String": Object({
                                "str": String(
                                    "box",
                                ),
                            }),
                        }),
                    ]),
                    "kind": String(
                        "OBJECT_TYPE",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                132,
            ),
        },
    ],
)
