parser/src/snapshots/squawk_parser__parse__tests__define_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: DefineStmt(
                Object({
                    "args": Array([
                        Object({
                            "List": Object({
                                "items": Array([
                                    Object({
                                        "FunctionParameter": Object({
                                            "argType": Object({
                                                "location": Number(
                                                    23,
                                                ),
                                                "names": Array([
                                                    Object({
                                                        "String": Object({
                                                            "str": String(
                                                                "complex",
                                                            ),
                                                        }),
                                                    }),
                                                ]),
                                                "typemod": Number(
                                                    -1,
                                                ),
                                            }),
                                            "mode": String(
                                                "FUNC_PARAM_IN",
                                            ),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                        Object({
                            "Integer": Object({
                                "ival": Number(
                                    -1,
                                ),
                            }),
                        }),
                    ]),
                    "definition": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            46,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "complex_add",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "sfunc",
                                ),
                                "location": Number(
                                    38,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            71,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "complex",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "stype",
                                ),
                                "location": Number(
                                    63,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "sval": String(
                                            "(0,0)",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "initcond",
                                ),
                                "location": Number(
                                    84,
                                ),
                            }),
                        }),
                    ]),
                    "defnames": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "sum",
                                ),
                            }),
                        }),
                    ]),
                    "kind": String(
                        "OBJECT_AGGREGATE",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                104,
            ),
        },
    ],
)
