parser/src/snapshots/squawk_parser__parse__tests__discard_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DiscardStmt(
                    Object({
                        "target": Number(
                            1,
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    14,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: DiscardStmt(
                    Object({
                        "target": Number(
                            2,
                        ),
                    }),
                ),
                stmt_location: 15,
                stmt_len: Some(
                    18,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: DiscardStmt(
                    Object({
                        "target": Number(
                            3,
                        ),
                    }),
                ),
                stmt_location: 34,
                stmt_len: Some(
                    13,
                ),
            },
        ),
    ],
)
