parser/src/snapshots/squawk_parser__parse__tests__drop_extension.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DropStmt(
                    Object({
                        "behavior": Number(
                            0,
                        ),
                        "objects": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "hstore",
                                    ),
                                }),
                            }),
                        ]),
                        "removeType": Number(
                            15,
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    21,
                ),
            },
        ),
    ],
)
