parser/src/snapshots/squawk_parser__parse__tests__drop_owned_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DropOwnedStmt(
                    Object({
                        "behavior": String(
                            "DROP_CASCADE",
                        ),
                        "roles": Array([
                            Object({
                                "RoleSpec": Object({
                                    "location": Number(
                                        15,
                                    ),
                                    "rolename": String(
                                        "foo",
                                    ),
                                    "roletype": String(
                                        "ROLESPEC_CSTRING",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    26,
                ),
            },
        ),
    ],
)
