parser/src/snapshots/squawk_parser__parse__tests__drop_role_set_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DropRoleStmt(
                    Object({
                        "roles": Array([
                            Object({
                                "RoleSpec": Object({
                                    "location": Number(
                                        11,
                                    ),
                                    "rolename": String(
                                        "jonathan",
                                    ),
                                    "roletype": String(
                                        "ROLESPEC_CSTRING",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    19,
                ),
            },
        ),
    ],
)
